# semantic-conventions-genai

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  RELEASING.md  dashboard-state.json  mise.toml  pull-request-dashboard.md  versions.env
.claude/: settings.json  settings.local.json
.github/: AGENTS.md  DEPENDENCIES.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml  renovate.json5
.github/codeql/: codeql-config.yml
.github/config/: flint.toml  lychee.toml
.github/instructions/: evaluate-reference.instructions.md  reference-instrumentation.instructions.md  reference-scenarios.instructions.md
.github/scripts/: merge-notification-state.py  pull-request-dashboard.py
.github/scripts/copilot-cli/: package-lock.json  package.json
.github/scripts/pull-request-dashboard/: README.md  WEBHOOK_SETUP.md  classification.py  dashboard.py  github_cli.py  netlify.toml  notifications.py  notify_slack.py  publish_dashboard.py  render.py  state.py  state_branch.py  utils.py
.github/skills/define-v2/: SKILL.md
.github/skills/evaluate-reference/: SKILL.md
.github/skills/reference/: SKILL.md
.github/workflows/: check.yml  ci.yml  codeql.yml  deploy-pull-request-dashboard-webhook.yml  pr-review-dashboard-listener.yml  pr-review-dashboard.yml  pull-request-dashboard.yml  release-dev.yml
docs/gen-ai/: anthropic.md  aws-bedrock.md  azure-ai-inference.md  gen-ai-agent-spans.md  gen-ai-events.md  gen-ai-exceptions.md  gen-ai-metrics.md  gen-ai-spans.md  mcp.md  openai.md
docs/registry/attributes/: README.md  aws.md  gen-ai.md  mcp.md  model.md  openai.md
internal/tools/: README.md  convert_model_to_v2.py  split_model_md.py
model/: manifest.yaml
model/gen-ai/: metrics.yaml  registry.yaml  spans.yaml
model/mcp/: spans.yaml
reference/: CONTRIBUTING.md  README.md  pyproject.toml
reference/reports/: inference-span.md  invoke-agent-client-span.md  plan-span.md
reference/scenarios/azure-ai-foundry/: data.json  pyproject.toml  scenario.py
reference/scenarios/deepeval/: pyproject.toml  scenario.py
reference/scenarios/instructor/: pyproject.toml  scenario.py
reference/scenarios/langchain/: data.json  pyproject.toml  scenario.py
reference/scenarios/openai-agents/: pyproject.toml  scenario.py
reference/shared/: pyproject.toml
schema-snapshot/: registry.yaml
(+52 files in other folders)
