[project]
name = "azure-ai-foundry-reference-test"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = [
    "azure-ai-projects==2.0.1",
    "azure-identity==1.25.3",
    "genai-reference-shared",
]

[tool.uv.sources]
genai-reference-shared = { path = "../../shared", editable = true }

[tool.uv]
package = false
